# Multi-platform-Clipboard-Sync-Project

./: .clangd  .gitignore  CMakeLists.txt  ClipboardSync_MVP_Architecture.md  README.md  build.cmd  build_pure_cpp_file_transfer_demo.bat  run_single_node.py
build_ninja/: .ninja_deps  .ninja_log  build.ninja
docs/: Class_Responsibilities_and_Relationships.md  Clipboard_Internals_KOS_Windows.md  FileStreaming_Implementation_Review.md  Project_FileTransfer_Principles_and_Call_Logic.md  Project_Structure_Class_Relationships_and_Clipboard_Flows.md  Pure_CPP_C_FileStreaming_StateMachine_Design.md  Pure_CPP_FileTransfer_Demo_Class_Guide.md  Pure_CPP_FileTransfer_StateMachine_Plan.md
src/: main.cpp
src/app/: AppController.cpp  AppController.h
src/clipboard/: ClipboardMonitor.cpp  ClipboardMonitor.h  ClipboardSnapshot.cpp  ClipboardSnapshot.h  ClipboardWriter.cpp  ClipboardWriter.h  ClipboardWriterBackend.cpp  IClipboardBackend.h  IVirtualFileProvider.h  QtClipboardBackend.cpp  QtClipboardBackend.h  WindowsClipboardBackend.cpp  WindowsClipboardBackend.h  WindowsVirtualFilePublisher.cpp  WindowsVirtualFilePublisher.h  X11ClipboardBackend.cpp  X11ClipboardBackend.h
src/common/: Config.cpp  Config.h  Logger.cpp  Logger.h
src/core/: file_transfer_actions.h  file_transfer_hash.cpp  file_transfer_hash.h  file_transfer_state_machine.cpp  file_transfer_state_machine.h  file_transfer_types.h
src/demo/: demo_data_source.cpp  demo_data_source.h  demo_harness.cpp  demo_harness.h  pure_cpp_file_transfer_demo.cpp
src/input/: PasteTriggerHook.cpp  PasteTriggerHook.h
src/protocol/: MessageCodec.cpp  MessageCodec.h  ProtocolHeader.h
src/sync/: SyncCoordinator.cpp  SyncCoordinator.h
src/transport/: TransportClient.cpp  TransportClient.h  TransportServer.cpp  TransportServer.h
src/ui/: SyncDebugWindow.cpp  SyncDebugWindow.h
